--- a/index.html
+++ b/index.html
@@ -12,30 +12,27 @@
 <tw-storydata name="El legado de los Kerranitas" startnode="1" creator="Twine" creator-version="2.9.2" format="Harlowe" format-version="3.3.9" ifid="5E91268C-1938-4E9C-A088-017E587F482F" options="" tags="" zoom="1" hidden><style role="stylesheet" id="twine-user-stylesheet" type="text/twine-css">tw-passage[tags~="Inicio"] {
 text-align: center;
 color: yellow;
-font-size: 60px;
+font-size: 40px;
 line-height: normal;
 }
 
 tw-passage[tags~="Juego"] {
 text-align: center;
 color: cyan;
-font-size: 30px;
+font-size: 20px;
 line-height: normal;
 }
 
 tw-link {
 color: red;
-font-size: 30px;
+font-size: 20px;
 }
 
 tw-story[tags~="Inicio"] {
  background-image:url("https://cdn.leonardo.ai/users/321f686a-16f6-440a-a132-ebd6d0c5d0a6/generations/e9a62865-2458-4ddc-9ed7-6ef0c0e9e5f6/Leonardo_Phoenix_a_cinematic_highcontrast_photograph_of_a_futu_1.jpg");
- background-size:cover;</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Menú" tags="Inicio" position="450,225" size="100,100">El Legado de los Kerranitas
-
-
+ background-size:center 75%;</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Menú" tags="Inicio" position="450,225" size="100,100">El Legado de los Kerranitas
 
 [[Nuevo juego]]
-
 [[Cargar partida]]
 </tw-passagedata><tw-passagedata pid="2" name="Nuevo juego" tags="Juego" position="425,350" size="100,100">Corre el año 2643.
 
