--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ font-size: 20px;
 }
 
 tw-story[tags~="Inicio"] {
- background-image:url("https://cdn.leonardo.ai/users/321f686a-16f6-440a-a132-ebd6d0c5d0a6/generations/e9a62865-2458-4ddc-9ed7-6ef0c0e9e5f6/Leonardo_Phoenix_a_cinematic_highcontrast_photograph_of_a_futu_1.jpg");
- background-size:center 75%;</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Menú" tags="Inicio" position="450,225" size="100,100">El Legado de los Kerranitas
+ background-image:url("https://cdn.leonardo.ai/users/321f686a-16f6-440a-a132-ebd6d0c5d0a6/generations/2fc77ab4-4bbc-4789-8663-49c9d81d44a4/Leonardo_Phoenix_a_cinematic_highcontrast_photograph_of_a_dyst_2.jpg");
+ background-size: cover;</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Menú" tags="Inicio" position="450,225" size="100,100">El Legado de los Kerranitas
 
 [[Nuevo juego]]
 [[Cargar partida]]
