--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ font-size: 20px;
 
 tw-story[tags~="Inicio"] {
  background-image:url("https://cdn.leonardo.ai/users/321f686a-16f6-440a-a132-ebd6d0c5d0a6/generations/2fc77ab4-4bbc-4789-8663-49c9d81d44a4/Leonardo_Phoenix_a_cinematic_highcontrast_photograph_of_a_dyst_2.jpg");
- background-size: cover;</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Menú" tags="Inicio" position="450,225" size="100,100">El Legado de los Kerranitas
+ background-size: cover;</style><script role="script" id="twine-user-script" type="text/twine-javascript"></script><tw-passagedata pid="1" name="Menú" tags="Inicio" position="450,225" size="100,100">El Legado de los kerranitas
 
 [[Nuevo juego]]
 [[Cargar partida]]
