--- a/index.html
+++ b/index.html
@@ -34,11 +34,16 @@ tw-story[tags~="Inicio"] {
 
 [[Nuevo juego]]
 [[Cargar partida]]
-</tw-passagedata><tw-passagedata pid="2" name="Nuevo juego" tags="Juego" position="425,350" size="100,100">Corre el año 2643.
+</tw-passagedata><tw-passagedata pid="2" name="Nuevo juego" tags="Juego" position="425,350" size="100,100">&lt;/style&gt;
+&lt;img
+src=&quot;https://cdn.leonardo.ai/users/321f686a-16f6-440a-a132-ebd6d0c5d0a6/generations/6df887ab-93bf-4505-bef9-25fb5d48c051/Leonardo_Phoenix_a_highcontrast_cinematic_photo_of_a_futuristi_0.jpg&quot; width=50%&gt;
+&lt;/div&gt;
 
+Corre el año 2643. Hace varios siglos que la humanidad conquistó el espacio.
+Hoy en día, millones de seres humanos pueblan cientos de planetas en el espacio.
 
+[[Continuar|intro]]
 
-[[Volver al Menú Principal|Menú]] 
 {(link:&quot;Guardar partida&quot;)[
   (if:(save-game:&quot;Slot 1&quot;))[
     
@@ -46,8 +51,9 @@ tw-story[tags~="Inicio"] {
   ](else: )[
     Error: La partida no se ha guardado
   ]
-]}</tw-passagedata><tw-passagedata pid="3" name="Cargar partida" tags="" position="600,275" size="100,100">(link: &quot;Load game: &quot; + (&quot;Slot 1&quot;) of Saves)[
-  (load-game: &quot;Slot 1&quot;)</tw-passagedata></tw-storydata>
+]}
+[[Volver al Menú Principal|Menú]] </tw-passagedata><tw-passagedata pid="3" name="Cargar partida" tags="" position="600,275" size="100,100">(link: &quot;Load game: &quot; + (&quot;Slot 1&quot;) of Saves)[
+  (load-game: &quot;Slot 1&quot;)</tw-passagedata><tw-passagedata pid="4" name="intro" tags="" position="425,475" size="100,100"></tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
