--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ tw-story[tags~="Inicio"] {
 [[Cargar partida]]
 </tw-passagedata><tw-passagedata pid="2" name="Nuevo juego" tags="Juego" position="425,350" size="100,100">&lt;/style&gt;
 &lt;img
-src=&quot;https://cdn.leonardo.ai/users/321f686a-16f6-440a-a132-ebd6d0c5d0a6/generations/6df887ab-93bf-4505-bef9-25fb5d48c051/Leonardo_Phoenix_a_highcontrast_cinematic_photo_of_a_futuristi_0.jpg&quot; width=50%&gt;
+src=&quot;https://cdn.leonardo.ai/users/321f686a-16f6-440a-a132-ebd6d0c5d0a6/generations/6df887ab-93bf-4505-bef9-25fb5d48c051/Leonardo_Phoenix_a_highcontrast_cinematic_photo_of_a_futuristi_0.jpg&quot;&gt;
 &lt;/div&gt;
 
 Corre el año 2643. Hace varios siglos que la humanidad conquistó el espacio.
