--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@ line-height: normal;
 tw-passage[tags~="Juego"] {
 text-align: center;
 color: cyan;
-font-size: 20px;
+font-size: 12px;
 line-height: normal;
 }
 
 tw-link {
 color: red;
-font-size: 20px;
+font-size: 16px;
 }
 
 tw-story[tags~="Inicio"] {
@@ -34,7 +34,7 @@ tw-story[tags~="Inicio"] {
 
 [[Nuevo juego]]
 [[Cargar partida]]
-</tw-passagedata><tw-passagedata pid="2" name="Nuevo juego" tags="Juego" position="425,350" size="100,100">&lt;/style&gt;
+</tw-passagedata><tw-passagedata pid="2" name="Nuevo juego" tags="Juego" position="600,300" size="100,100">&lt;/style&gt;
 &lt;img
 src=&quot;https://cdn.leonardo.ai/users/321f686a-16f6-440a-a132-ebd6d0c5d0a6/generations/43eb26b2-60bb-4ec6-a7be-198780eed8d1/Leonardo_Phoenix_a_dramatic_highcontrast_cinematic_photo_of_a_0.jpg&quot; width=100%&gt;
 &lt;/div&gt;
@@ -51,8 +51,25 @@ Corre el año 2643. Hace varios siglos que la humanidad conquistó el espacio. H
     Error: La partida no se ha guardado
   ]
 ]}
-[[Volver al Menú Principal|Menú]] </tw-passagedata><tw-passagedata pid="3" name="Cargar partida" tags="" position="600,275" size="100,100">(link: &quot;Load game: &quot; + (&quot;Slot 1&quot;) of Saves)[
-  (load-game: &quot;Slot 1&quot;)</tw-passagedata><tw-passagedata pid="4" name="intro" tags="" position="425,475" size="100,100"></tw-passagedata></tw-storydata>
+[[Volver al Menú Principal|Menú]] </tw-passagedata><tw-passagedata pid="3" name="Cargar partida" tags="" position="275,350" size="100,100">(link: &quot;Load game: &quot; + (&quot;Slot 1&quot;) of Saves)[
+  (load-game: &quot;Slot 1&quot;)</tw-passagedata><tw-passagedata pid="4" name="intro" tags="Juego" position="425,400" size="100,100">&lt;/style&gt;
+&lt;img
+src=&quot;https://cdn.leonardo.ai/users/321f686a-16f6-440a-a132-ebd6d0c5d0a6/generations/cd082b58-420d-452f-b03c-dc790c6997c4/Leonardo_Phoenix_a_dramatic_highcontrast_cinematic_photograph_2.jpg&quot; width=100%&gt;
+&lt;/div&gt;
+
+Dado que aún los viajes interplanetarios son muy largos, las colonias suelen ser bastante independientes, y rara vez alguien ha regresado a la Tierra. La mayoría de los colonos han nacido en otros planetas.
+
+[[Continuar|presentacion]]
+
+{(link:&quot;Guardar partida&quot;)[
+  (if:(save-game:&quot;Slot 1&quot;))[
+    
+    Partida guardada
+  ](else: )[
+    Error: La partida no se ha guardado
+  ]
+]}
+[[Volver al Menú Principal|Menú]] </tw-passagedata><tw-passagedata pid="5" name="presentacion" tags="" position="575,575" size="100,100"></tw-passagedata></tw-storydata>
 <script title="Twine engine code" data-main="harlowe">(function(){"use strict";
 var require,define;!function(){var e={},r={};require=function(i){var n=e[i];return n&&(r[i]=n[1].apply(void 0,n[0].map(require)),e[i]=void 0),r[i]},(define=function(r,i,n){if("function"==typeof r)return r();e[r]=[i,n]}).amd=!0}();/*!
  * https://github.com/paulmillr/es6-shim
