--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ line-height: normal;
 tw-passage[tags~="Juego"] {
 text-align: center;
 color: cyan;
-font-size: 12px;
+font-size: 14px;
 line-height: normal;
 }
 
@@ -57,7 +57,7 @@ Corre el año 2643. Hace varios siglos que la humanidad conquistó el espacio. H
 src=&quot;https://cdn.leonardo.ai/users/321f686a-16f6-440a-a132-ebd6d0c5d0a6/generations/cd082b58-420d-452f-b03c-dc790c6997c4/Leonardo_Phoenix_a_dramatic_highcontrast_cinematic_photograph_2.jpg&quot; width=100%&gt;
 &lt;/div&gt;
 
-Dado que aún los viajes interplanetarios son muy largos, las colonias suelen ser bastante independientes, y rara vez alguien ha regresado a la Tierra. La mayoría de los colonos han nacido en otros planetas.
+Dado que aún los viajes interplanetarios son muy largos, las colonias suelen ser bastante independientes, y rara vez alguien ha regresado a la Tierra. La mayoría de los colonos han nacido en otros planetas y se han quedado a vivir en ellos.
 
 [[Continuar|presentacion]]
 
